--- a/public/profile.html
+++ b/public/profile.html
@@ -139,8 +139,7 @@
 
 <!-- نافبار ثابت مكتوب يدوي -->
 <nav class="nav-bar">
-    <a href="home.html"><i class="fas fa-home"></i></a>
-    <a href="grades.html"><i class="fas fa-chart-bar"></i></a>
+    <a href="Home.html"><i class="fas fa-home"></i></a>
     <a href="violations.html"><i class="fas fa-exclamation-triangle"></i></a>
     <a href="profile.html" class="active"><i class="fas fa-user"></i></a>
     <a href="settings.html"><i class="fas fa-cog"></i></a>
